Fix on mobile movie page header

--- a/assets/css/movie_page_style.css
+++ b/assets/css/movie_page_style.css
@@ -175,10 +175,6 @@ a {
 	padding-top: 0px;
 }
 
-.container .hide-on-med-and-up {
-	padding-top: 20px;
-}
-
 .section #videos .video-container {
 	padding: 0px;
 	width: 100%;
